# diff-gaussian-rasterization-ori

./: .gitignore  CMakeLists.txt  rasterize_points.cu  setup.py
cuda_rasterizer/: rasterizer.h  rasterizer_impl.cu
diff_gaussian_rasterization/: __init__.py
diff_gaussian_rasterization_ori/: __init__.py
