#
# Copyright (C) 2023, Inria
# GRAPHDECO research group, https://team.inria.fr/graphdeco
# All rights reserved.
#
# This software is free for non-commercial, research and evaluation use 
# under the terms of the LICENSE.md file.
#
# For inquiries contact  george.drettakis@inria.fr
#

cmake_minimum_required(VERSION 3.20)

project(DiffRast LANGUAGES CUDA CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CUDA_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")


add_library(CudaRasterizer
        cuda_rasterizer/backward.h
        cuda_rasterizer/backward.cu
        cuda_rasterizer/forward.h
        cuda_rasterizer/forward.cu
        cuda_rasterizer/auxiliary.h
        cuda_rasterizer/rasterizer_impl.cu
        cuda_rasterizer/rasterizer_impl.h
        cuda_rasterizer/rasterizer.h
        rasterize_points.cu
        rasterize_points.h
        ext.cpp
)
set_target_properties(CudaRasterizer PROPERTIES CUDA_ARCHITECTURES "75;86;89")

target_include_directories(CudaRasterizer PUBLIC "/opt/miniconda3/envs/gaussian_splatting/include/python3.10")
target_include_directories(CudaRasterizer PUBLIC "/opt/miniconda3/envs/gaussian_splatting/lib/python3.10/site-packages/torch/include")
target_include_directories(CudaRasterizer PUBLIC "/opt/miniconda3/envs/gaussian_splatting/lib/python3.10/site-packages/torch/include/torch/csrc/api/include")



target_include_directories(CudaRasterizer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cuda_rasterizer)
target_include_directories(CudaRasterizer PRIVATE third_party/glm ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
